Version ClaSS-1.0.23 release (2012/07/12)
-------------------------------------------

New fields added to users table including personal email.

Re-worked the staff page under Admin to list users by role.



Version ClaSS-1.0.22 release (2012/07/06)
-------------------------------------------

Major change to the MarkBook to preserve contents from previous
academic years.


Version ClaSS-1.0.21 release (2012/06/10)
-------------------------------------------

A list of a student's class teachers added to each subject report.

Tidied the class_nos script.

Fix to new order to allow changing catalogue for existing order.

Check for HTTPS when constructing file urls.

Added passport expiry date as student field.

Custom enrolment view for student lists.

Fix to the enrolments list: hide submit when all applied is listed.

Private fields implemented for contact phone numbers and addresses.

Basic column copy into function for MarkBook.

The report definition functions now filter by the report's subject_status.

The report_reports_list script filters relevant classes by a report's
subject_status.

Fix to printing Incidents for the same student multiple times.

Access to Other Groups restricted by worklevel.


Version ClaSS-1.0.20 release (2012/04/22)
-------------------------------------------

Analysis of spending and materials purchased by supplier.

Bugfix to editing Internal Assessment on the SEN view page.

InfoBook search for other groups includes over-all list by community
type.

Message ID and Organization on email headers.

Changed export scripts to use file cache under dataroot.

Performance improvement for js function processContent.


Version ClaSS-1.0.19 release (2012/04/10)
-------------------------------------------

Fix to profile average column with compound profiles.

Export students tweaked to compensate for too many phones.

Extra single student field for FirstContactMobilePhone.



Version ClaSS-1.0.18 release (2012/03/20)